book/tests/snapshots/snapshot__tests__prql__transforms__sort-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nsort [age, -tenure, +salary]\n"
---
from employees
sort [
  age,
  -tenure,
  salary,
]



