book/tests/snapshots/snapshot__tests__prql__transforms__sort-3.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nsort [s\"substr({first_name}, 2, 5)\"]\n"
---
from employees
sort [s"substr({first_name}, 2, 5)"]



