book/tests/snapshots/snapshot__tests__prql__transforms__sort-4.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nsort tenure\nderive name = f\"{first_name} {last_name}\"\n"
---
from employees
sort tenure
derive name = f"{first_name} {last_name}"



