book/tests/snapshots/snapshot__tests__prql__transforms__sort-5.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nsort tenure\njoin locations [==employee_id]\n"
---
from employees
sort tenure
join locations [==employee_id]



