book/tests/snapshots/snapshot__tests__prql__transforms__take-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from orders\nsort [-value, date]\ntake 101..110\n"
---
from orders
sort [
  -value,
  date,
]
take 101..110



