book/tests/snapshots/snapshot__tests__prql__transforms__window-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nsort age\nderive rnk = rank\n"
---
from employees
sort age
derive rnk = rank



