book/tests/snapshots/snapshot__tests__prql__transforms__window-3.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\ngroup department (\n  sort age\n  derive rnk = rank\n)\n"
---
from employees
group department (
  sort age
  derive rnk = rank
)



