book/tests/snapshots/snapshot__tests__prql__transforms__window-4.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nfilter salary < (average salary)\n"
---
from employees
filter salary < ( average salary )



